# schurli

./: .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.yaml  kube.yaml  pyproject.toml
.github/workflows/: test_build_publish.yaml
config/: config.example
schurli/: __init__.py
schurli/src/: bot.py  cleaner.py  helpers.py
