[tool.poetry]
name = "schurli"
version = "0.1.2"
description = "It keeps your channels clean O.o"
authors = ["0xk1f0"]
readme = "README.md"

[tool.version]
codename = "dyson"

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
toml = "^0.10.2"

[tool.poetry.scripts]
main = "schurli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
